--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 /*  your css code here. If applicable */
+#yellow{
+	
+	background-color:yellow;
+	border:3px solid green;
+}
+/*  your css code here. If applicable */
+#red{
+	
+	background-color:red;
+	border:3px solid black;
+}
+/*  your css code here. If applicable */
+#green{
+	
+	background-color:green;
+	border:3px solid yellow;
+}
